--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,16 @@
 {
   "extends": "eslint-config-airbnb",
   "env": {
-    "browser": true,
+    "browser": false,
     "node": true,
-    "jasmine": true
+    "jasmine": true,
+    "es6": true
+  },
+  "ecmaFeatures": {
+    "modules": false
   },
   "rules": {
+    "strict": [2, "global"],
     no-undef: 2,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
