--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "cordova-android": "^7.0.0",
-    "cordova-plugin-whitelist": "^1.3.3"
+    "cordova-plugin-whitelist": "^1.3.3",
+    "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
