--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "dependencies": {
     "cordova-android": "^7.0.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "material-design-icons": "^3.0.1"
   },
@@ -104,7 +106,9 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
