--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "inline-style-prefixer": "^4.0.2",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^0.20.1"
+    "material-ui": "^0.20.1",
+    "cordova-plugin-file": "^6.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.11.4",
@@ -111,7 +112,9 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-nativestorage": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "android"
