--- a/cordova/package.json
+++ b/cordova/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cordova",
+    "name": "com.company.cordovaboilerplate",
     "displayName": "HelloCordova",
     "version": "1.0.0",
     "description": "A sample Apache Cordova application that responds to the deviceready event.",
@@ -8,5 +8,17 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Apache Cordova Team",
-    "license": "Apache-2.0"
+    "license": "Apache-2.0",
+    "dependencies": {
+        "cordova-android": "^7.1.3",
+        "cordova-plugin-whitelist": "^1.3.3"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
