--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gulp-clean": "^0.4.0",
-    "gulp-debug": "^4.0.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5"
@@ -12,16 +10,19 @@
   "scripts": {
     "start": "react-scripts start",
     "lint": "eslint --ext=js --ext==jsx . --fix",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cd cordova && gulp && sudo cordova run android",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-debug": "^4.0.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1"
-  }
+  },
+  "homepage": "."
 }
