--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, {
       "extensions": [".js", ".jsx"]
-    }]
+    }],
+    "react/no-array-index-key": "off"
   }
 }
